webapps/test/v2/WEB-INF/jsp/error/403.jsp
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
<head>
<meta charset="UTF-8" />
<link rel="stylesheet" href="${pageContext.request.contextPath}/css/error.css">
<title>403 Forbidden</title>
</head>
<body>
	<div class="error-container">
		<h1>403 Forbidden</h1>
		<p>You don't have permission to access on this server.</p>
	</div>
</body>
</html>